# Context-Engine

./: .gitignore  README.md  context.md  context.txt  demo.yml  pyproject.toml  requirements.txt
context_pack/: __main__.py  analyzer.py  cache.py  cli.py  context_assembler.py  deep_dive.py  dependency_parser.py  diff_context.py  entry_point_detector.py  file_describer.py  file_ranker.py  framework_detector.py  language_detector.py  llm_validator.py  pattern_detector.py  scanner.py
context_pack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test.py
